# qt-pilot

./: .gitignore  LICENSE  README.md  pyproject.toml
skills/: dogfood-qt.md  qt-pilot.md
src/qt_pilot/: __init__.py  annotate.py  cli.py  probe.py  registry.py  server.py
tests/: conftest.py  run_test_app.py  test_app.qml  test_registry.py
