[project]
name = "qt-pilot"
version = "0.1.0"
description = "CLI automation for PySide6/QML apps — like Playwright, but for Qt Quick"
requires-python = ">=3.10"
dependencies = []
license = "MIT"
readme = "README.md"

[project.scripts]
qt-pilot = "qt_pilot.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "PySide6>=6.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qt_pilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
